--- a/data/playbooks/roles/aiqum/maintenance/tasks/end_one.yml
+++ b/data/playbooks/roles/aiqum/maintenance/tasks/end_one.yml
@@ -1,2 +1,3 @@
-- include_tasks: "facts.yml"
-- include_tasks: "end.yml"
+---
+- include_tasks: "{{ playbook_dir}}/roles/aiqum/maintenance/tasks/facts.yml"
+- include_tasks: "{{ playbook_dir}}/roles/aiqum/maintenance/tasks/end.yml"
