--- a/data/playbooks/roles/aiqum/maintenance/tasks/start_one.yml
+++ b/data/playbooks/roles/aiqum/maintenance/tasks/start_one.yml
@@ -1,2 +1,2 @@
-- include_tasks: "facts.yml"
-- include_tasks: "start.yml"
+- include_tasks: "{{ playbook_dir}}/roles/aiqum/maintenance/tasks/facts.yml"
+- include_tasks: "{{ playbook_dir}}/roles/aiqum/maintenance/tasks/start.yml"
