--- a/data/playbooks/roles/maf/simulator/tasks/deploy_sim.yml
+++ b/data/playbooks/roles/maf/simulator/tasks/deploy_sim.yml
@@ -1,5 +1,6 @@
 ---
-- set_fact:
+- name: Set authentication facts
+  set_fact:
     vcenter_auth: &vcenter_auth
       hostname: '{{ vcenter_host }}'
       username: '{{ vcenter_username }}'
