--- a/data/playbooks/roles/aiqum/maintenance/tasks/end.yml
+++ b/data/playbooks/roles/aiqum/maintenance/tasks/end.yml
@@ -1,8 +1,9 @@
 ---
 - name: "Role - ontap/aiqum/maintenance_end"
   block:
-  - set_fact:
-      no_log: true
+  - name: Set authentication facts
+    no_log: true
+    set_fact:
       auth: &auth
         hostname: "{{ aiq_hostname }}"
         username: "{{ aiq_username }}"
@@ -11,7 +12,8 @@
         https: True
 
     # logging
-  - set_fact:
+  - name: Logging
+    set_fact:
       l_cluster: "{{ cluster_name | to_nice_yaml(2) | indent(2,true) | do_log('ontap/aiqum/maintenance_end','cluster',qlogname) }}"
 
   - name: End maintenance
