--- a/data/playbooks/roles/aiqum/management/tasks/facts.yml
+++ b/data/playbooks/roles/aiqum/management/tasks/facts.yml
@@ -5,6 +5,7 @@
     cluster: "{{ 'cluster' | merge_vars(d=vars_defaults,t=vars_templates,v=vars_local,o=vars_overrides,c=qtask_child) }}"
 
 - name: Set naming facts
+  no_log: true
   ansible.builtin.set_fact:
     # ansible_python_interpreter:   /usr/bin/python3
     cluster_name:                   "{{ cluster.name | default(inventory_hostname) }}"
