--- a/data/playbooks/roles/aiqum/management/tasks/register.yml
+++ b/data/playbooks/roles/aiqum/management/tasks/register.yml
@@ -1,8 +1,9 @@
 ---
 - name: "Role - ontap/aiqum/register"
   block:
-  - set_fact:
-      no_log: true
+  - name: Set authentication facts
+    no_log: true
+    set_fact:
       auth: &auth
         user: "{{ aiq_username }}"
         password: "{{ aiq_password }}"
@@ -12,7 +13,8 @@
         body_format: json      
 
     # logging
-  - set_fact:
+  - name: Logging
+    set_fact:
       l_cluster: "{{ cluster | to_nice_yaml(2) | indent(2,true) | do_log('ontap/aiqum/register','cluster',qlogname) }}"
 
   - name: Get CLUSTER in Aiqum
@@ -28,7 +30,7 @@
 
   - block: 
     - name: Register CLUSTER in Aiqum
-      #  no_log: true
+      no_log: true
       uri:
         url: "https://{{ aiq_hostname }}/api/admin/datasources/clusters"
         body:
