--- a/data/playbooks/roles/maf/logic/tasks/bypass.yml
+++ b/data/playbooks/roles/maf/logic/tasks/bypass.yml
@@ -11,14 +11,13 @@
   delegate_to: localhost
   register: logic_result
 
-- set_fact:
+- name: Register logic result
+  set_fact:
     vars_local : "{{ logic_result.vars }}"
     qlogname : "{{ qlogname | default('',true) }}"
 
-- set_fact:
+- name: Logging
+  set_fact:
     qlogname: "{{ vars_external | to_nice_yaml(2) | indent(2,true) | do_log('Running logic bypass','vars_external',qlogname) }}"
 
 # => bypassing the logic, just passing the data through, so no need to log the outcome
-
-# - set_fact:
-#     qlogname: "{{ vars_local | to_nice_yaml(2) | indent(2,true) | do_log('After logic bypass','vars_local',qlogname) }}"
