--- a/data/playbooks/roles/maf/logic/tasks/svm_delete.yml
+++ b/data/playbooks/roles/maf/logic/tasks/svm_delete.yml
@@ -9,12 +9,15 @@
 
 # - debug: var=logic_result
 
-- set_fact:
+- name: Register logic result
+  set_fact:
     vars_local : "{{ logic_result.vars }}"
     qlogname : "{{ qlogname | default('',true) }}"    
 
-- set_fact:
+- name: Logging
+  set_fact:
     qlogname: "{{ vars_external | to_nice_yaml(2) | indent(2,true) | do_log('Running logic svm_delete','vars_external',qlogname) }}"
 
-- set_fact:
+- name: Logging
+  set_fact:
     qlogname: "{{ vars_local | to_nice_yaml(2) | indent(2,true) | do_log('After logic svm_delete','vars_local',qlogname) }}"
