--- a/data/playbooks/roles/ontap/cluster/tasks/example_report.yml
+++ b/data/playbooks/roles/ontap/cluster/tasks/example_report.yml
@@ -3,7 +3,9 @@
   # so this task will require the ontap credentials to be passed
 - name: "Role - ontap/cluster/example_report.yml"
   block:
-  - set_fact:
+  - name: Set authentication facts
+    no_log: true
+    set_fact:
       auth: &auth
         hostname: "{{ auth_rest.hostname | default(omit) }}"
         username: "{{ auth_rest.username | default(omit) }}"
@@ -12,7 +14,6 @@
         cert_filepath: "{{ auth_rest.cert_filepath | default(omit) }}"
         validate_certs: "{{ auth_rest_validate_certs | default(false) }}"
         use_rest: always
-    no_log: true
 
     # get cluster info
   - name: get cluster info
