--- a/data/playbooks/roles/ontap/qtree/tasks/facts_multi.yml
+++ b/data/playbooks/roles/ontap/qtree/tasks/facts_multi.yml
@@ -3,5 +3,5 @@
 ## Naming facts
 - name: Merge Extravars
   ansible.builtin.set_fact:
-    qtrees : "{{ 'qtrees' | merge_lists(v=vars_local,required_keys=['name'],c=qtask_child) }}"
+    qtrees : "{{ 'qtrees' | merge_lists(d=vars_defautls,t=vars_templates,v=vars_local,required_keys=['name'],c=qtask_child) }}"
 
