--- a/data/playbooks/roles/ontap/volume/tasks/delete_lock.yml
+++ b/data/playbooks/roles/ontap/volume/tasks/delete_lock.yml
@@ -1,7 +1,9 @@
 ---
 - name: "Role - ontap/volume/delete_lock"
   block:
-  - set_fact:
+  - name: Set authentication facts
+    no_log: true
+    set_fact:
       auth: &auth
         hostname: "{{ auth_rest.hostname | default(omit) }}"
         username: "{{ auth_rest.username | default(omit) }}"
@@ -9,11 +11,11 @@
         key_filepath: "{{ auth_rest.key_filepath | default(omit) }}"
         cert_filepath: "{{ auth_rest.cert_filepath | default(omit) }}"
         validate_certs: "{{ auth_rest_validate_certs | default(false) }}"
-        use_rest: always
-    no_log: true      
+        use_rest: always      
 
   # logging
-  - set_fact:
+  - name: Logging
+    set_fact:
       l_cluster: "{{ cluster | to_nice_yaml(2) | indent(2,true) | do_log('ontap/volume/delete_lock','cluster',qlogname) }}"
       l_svm:     "{{ svm     | to_nice_yaml(2) | indent(2,true) | do_log('','svm',qlogname) }}"
       l_volume:  "{{ volume  | to_nice_yaml(2) | indent(2,true) | do_log('','volume',qlogname) }}"
