--- a/data/playbooks/roles/ontap/vscan_scanner_pool/tasks/create.yml
+++ b/data/playbooks/roles/ontap/vscan_scanner_pool/tasks/create.yml
@@ -1,7 +1,9 @@
 ---
 - name: "Role - ontap/vscan_scanner_pool/create"
   block:
-  - set_fact:
+  - name: Set authentication facts
+    no_log: true
+    set_fact:
       auth: &auth
         hostname: "{{ auth_rest.hostname | default(omit) }}"
         username: "{{ auth_rest.username | default(omit) }}"
@@ -10,10 +12,10 @@
         cert_filepath: "{{ auth_rest.cert_filepath | default(omit) }}"
         validate_certs: "{{ auth_rest_validate_certs | default(false) }}"
         use_rest: always
-    no_log: true
 
   # logging
-  - set_fact:
+  - name: Logging
+    set_fact:
       l_cluster:             "{{ cluster             | to_nice_yaml(2) | indent(2,true) | do_log('ontap/vscan_scanner_pool/create','cluster',qlogname) }}"
       l_svm:                 "{{ svm                 | to_nice_yaml(2) | indent(2,true) | do_log('','svm',qlogname) }}"
       l_vscan_scanner_pool:  "{{ vscan_scanner_pool  | to_nice_yaml(2) | indent(2,true) | do_log('','vscan_scanner_pool',qlogname) }}"
