--- a/data/playbooks/roles/ontap/vserver_peer/tasks/create.yml
+++ b/data/playbooks/roles/ontap/vserver_peer/tasks/create.yml
@@ -2,7 +2,9 @@
 
 - name: "Role - ontap/vserver_peer/create"
   block:
-  - set_fact:
+  - name: Set authentication facts
+    no_log: true
+    set_fact:
       auth: &auth
         hostname: "{{ auth_rest.hostname | default(omit) }}"
         username: "{{ auth_rest.username | default(omit) }}"
@@ -11,10 +13,10 @@
         cert_filepath: "{{ auth_rest.cert_filepath | default(omit) }}"
         validate_certs: "{{ auth_rest_validate_certs | default(false) }}"
         use_rest: always
-    no_log: true
 
   # logging
-  - set_fact:
+  - name: Logging
+    set_fact:
       l_vserver_peer:        "{{ vserver_peer        | to_nice_yaml(2) | indent(2,true) | do_log('ontap/vserver_peer/create','vserver_peer',qlogname) }}"
 
   - name: "Create vserver peering [{{ vserver_peer[0].svm.name }}] -> [{{ vserver_peer[1].svm.name }}]"  
