--- a/data/playbooks/roles/ontap/vserver_peer/tasks/create.yml
+++ b/data/playbooks/roles/ontap/vserver_peer/tasks/create.yml
@@ -11,7 +11,8 @@
         password: "{{ auth_rest.password | default(omit) }}"
         key_filepath: "{{ auth_rest.key_filepath | default(omit) }}"
         cert_filepath: "{{ auth_rest.cert_filepath | default(omit) }}"
-        validate_certs: "{{ auth_rest_validate_certs | default(false) }}"
+        validate_certs: "{{ auth_rest.validate_certs | default(false) }}"
+        https: "{{ auth_rest.https | default(false) }}"
         use_rest: always
 
   # logging
