set lod secrets - and beta image

--- a/.env
+++ b/.env
@@ -24,3 +24,14 @@ HTTPS=1
 NODE_ENV=production
 # home directory
 HOME_DIR=/root
+
+# admin username
+ADMIN_USERNAME=admin
+# admin password
+ADMIN_PASSWORD=Netapp1!
+
+# database encryption secret
+DB_ENCRYPTION_SECRET=Netapp1!
+
+# access token secret
+ACCESS_TOKEN_SECRET=Netapp1!
