--- a/data/playbooks/roles/ontap/cifs_share/tasks/create_one.yml
+++ b/data/playbooks/roles/ontap/cifs_share/tasks/create_one.yml
@@ -1,2 +1,2 @@
-- include_tasks: "facts.yml"
-- include_tasks: "create.yml"
+- include_tasks: "{{ playbook_dir}}/roles/ontap/cifs_share/tasks/facts.yml"
+- include_tasks: "{{ playbook_dir}}/roles/ontap/cifs_share/tasks/create.yml"
