--- a/data/playbooks/roles/ontap/volume/tasks/create_one.yml
+++ b/data/playbooks/roles/ontap/volume/tasks/create_one.yml
@@ -1,3 +1,4 @@
 ---
-- include_tasks: "facts.yml"
-- include_tasks: "create.yml"
+- include_tasks: "{{ playbook_dir}}/roles/ontap/volume/tasks/facts.yml"
+- include_tasks: "{{ playbook_dir}}/roles/ontap/volume/tasks/create.yml"
+
