--- a/data/playbooks/roles/ontap/volume/tasks/delete.yml
+++ b/data/playbooks/roles/ontap/volume/tasks/delete.yml
@@ -21,14 +21,26 @@
       l_svm:     "{{ svm     | to_nice_yaml(2) | indent(2,true) | do_log('','svm',qlogname) }}"
       l_volume:  "{{ volume  | to_nice_yaml(2) | indent(2,true) | do_log('','volume',qlogname) }}"
 
-  - name: "Unmount volume [{{ volume.name }}]"
-    netapp.ontap.na_ontap_volume:
-      state: present
-      vserver:                 "{{ svm.name }}"    
-      name:                    "{{ volume.name }}"
-      junction_path:           ""
+  - name: "Collect cifs shares for volume [{{ volume.name }}]"
+    netapp.ontap.na_ontap_rest_info:
+      gather_subset: 
+      - protocols/cifs/shares
+      use_python_keys: true
+      parameters:
+        volume.name: "{{ volume.name }}"
+        svm.name: "{{ svm.name }}"
       <<: *auth
     delegate_to: localhost
+    register: cifs_share_info
+
+  - name: Remove cifs shares for volume [{{ volume.name }}]
+    include_tasks: "{{ playbook_dir }}/roles/ontap/cifs_share/tasks/delete_one.yml"
+    loop_control:
+      loop_var: cifs_share_item
+      label: "Removing cifs share [{{ cifs_share_item.name }}]"
+    loop: "{{ cifs_share_info.ontap_info.protocols_cifs_shares.records }}"
+    when: 
+    - (cifs_share_info.ontap_info.protocols_cifs_shares.num_records | default(0)) > 0
 
   - name: "Delete volume [{{ volume.name }}]"
     netapp.ontap.na_ontap_volume:
