--- a/data/playbooks/roles/ontap/volume/tasks/delete_lock_one.yml
+++ b/data/playbooks/roles/ontap/volume/tasks/delete_lock_one.yml
@@ -1,3 +1,3 @@
 ---
-- include_tasks: "facts.yml"
-- include_tasks: "delete_lock.yml"
+- include_tasks: "{{ playbook_dir}}/roles/ontap/volume/tasks/facts.yml"
+- include_tasks: "{{ playbook_dir}}/roles/ontap/volume/tasks/delete_lock.yml"
